fix overflow in the /blog BannerForm

--- a/src/components/Blog/BannerForm/styles.module.css
+++ b/src/components/Blog/BannerForm/styles.module.css
@@ -7,6 +7,7 @@
   background-color: #f7f7f7;
   border-radius: 24px;
   color: var(--mui-palette-text-dark);
+  overflow: hidden;
 }
 
 .container iframe {
